fixed overflow

--- a/packages/itwin/grouping-mapping-widget/src/widget/components/PropertyMenu.scss
+++ b/packages/itwin/grouping-mapping-widget/src/widget/components/PropertyMenu.scss
@@ -2,7 +2,7 @@
 * Copyright (c) Bentley Systems, Incorporated. All rights reserved.
 * See LICENSE.md in the project root for license terms and full copyright notice.
 *--------------------------------------------------------------------------------------------*/
-@import '~@itwin/itwinui-css/scss/variables';
+@import "~@itwin/itwinui-css/scss/variables";
 
 .loading-overlay {
   display: flex;
@@ -14,6 +14,8 @@
 }
 
 .property-menu-wrapper {
+  display: flex;
+  flex-direction: column;
   height: 100%;
 
   .information-panel {
@@ -35,6 +37,7 @@
   .property-menu-container {
     display: flex;
     flex-direction: column;
+    overflow: auto;
     gap: $iui-baseline * 3;
     .property-table {
       display: flex;
